@@ -27,11 +27,19 @@ import io.envoyproxy.envoy.extensions.filters.network.http_connection_manager.v3
 import io.grpc.Server;
 import io.grpc.ServerBuilder;
 import io.grpc.netty.shaded.io.grpc.netty.NettyServerBuilder;
+import io.grpc.stub.StreamObserver;
+import io.grpc.xds.shaded.io.envoyproxy.envoy.service.load_stats.v3.LoadReportingServiceGrpc;
+import io.grpc.xds.shaded.io.envoyproxy.envoy.service.load_stats.v3.LoadStatsRequest;
+import io.grpc.xds.shaded.io.envoyproxy.envoy.service.load_stats.v3.LoadStatsResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.util.List;
 
 public class XdsControlPlane {
+
+    public static final Logger logger = LoggerFactory.getLogger(XdsControlPlane.class);
 
     private static final String GROUP = "key";
 
@@ -42,6 +50,8 @@ public class XdsControlPlane {
      * @param arg command-line args
      */
     public static void main(String[] arg) throws IOException, InterruptedException {
+        logger.info("Staring control plane...");
+
         SimpleCache<String> cache = new SimpleCache<>(new NodeGroup<String>() {
             @Override
             public String hash(Node node) {
@@ -76,141 +86,157 @@ public class XdsControlPlane {
                                 .build()
                 )
                 .build();
-        cache.setSnapshot(
-                GROUP,
-                Snapshot.create(
-                        ImmutableList.of(
-                                Cluster.newBuilder()
-                                        .setName("cluster0")
-                                        .setConnectTimeout(Duration.newBuilder().setSeconds(5))
-                                        .setType(DiscoveryType.EDS)
-                                        .setLbPolicy(Cluster.LbPolicy.ROUND_ROBIN)
-                                        .setEdsClusterConfig(Cluster.EdsClusterConfig.newBuilder()
-                                                .setEdsConfig(
-                                                        ConfigSource.newBuilder()
-                                                                .setAds(
-                                                                        AggregatedConfigSource.newBuilder()
-                                                                                .build()
-                                                                ).build()
-                                                )
-                                                .build())
-                                        .build()),
-                        List.of(
-                                ClusterLoadAssignment.newBuilder()
-                                        .setClusterName("cluster0")
-                                        .addEndpoints(LocalityLbEndpoints.newBuilder()
-                                                .setLoadBalancingWeight(UInt32Value.newBuilder().setValue(100).build())
-                                                .setLocality(Locality.newBuilder()
-                                                        .setRegion("US").build())
-                                                .addLbEndpoints(
-                                                        LbEndpoint.newBuilder()
-                                                                .setHealthStatus(HealthStatus.HEALTHY)
-                                                                .setLoadBalancingWeight(UInt32Value.newBuilder().setValue(50).build())
-                                                                .setEndpoint(
-                                                                        Endpoint.newBuilder()
-                                                                                .setAddress(
-                                                                                        Address.newBuilder()
-                                                                                                .setSocketAddress(
-                                                                                                        SocketAddress.newBuilder()
-                                                                                                                .setAddress("127.0.0.1")
-                                                                                                                .setPortValue(50051)
-                                                                                                                .build()
-                                                                                                )
+        Snapshot snapshot = Snapshot.create(
+                ImmutableList.of(
+                        Cluster.newBuilder()
+                                .setName("cluster0")
+                                .setConnectTimeout(Duration.newBuilder().setSeconds(5))
+                                .setType(DiscoveryType.EDS)
+                                .setLbPolicy(Cluster.LbPolicy.ROUND_ROBIN)
+                                .setEdsClusterConfig(Cluster.EdsClusterConfig.newBuilder()
+                                        .setEdsConfig(
+                                                ConfigSource.newBuilder()
+                                                        .setAds(
+                                                                AggregatedConfigSource.newBuilder()
+                                                                        .build()
+                                                        ).build()
+                                        )
+                                        .build())
+                                .build()),
+                List.of(
+                        ClusterLoadAssignment.newBuilder()
+                                .setClusterName("cluster0")
+                                .addEndpoints(LocalityLbEndpoints.newBuilder()
+                                        .setLoadBalancingWeight(UInt32Value.newBuilder().setValue(100).build())
+                                        .setLocality(Locality.newBuilder()
+                                                .setRegion("US").build())
+                                        .addLbEndpoints(
+                                                LbEndpoint.newBuilder()
+                                                        .setHealthStatus(HealthStatus.HEALTHY)
+                                                        .setLoadBalancingWeight(UInt32Value.newBuilder().setValue(50).build())
+                                                        .setEndpoint(
+                                                                Endpoint.newBuilder()
+                                                                        .setAddress(
+                                                                                Address.newBuilder()
+                                                                                        .setSocketAddress(
+                                                                                                SocketAddress.newBuilder()
+                                                                                                        .setAddress("127.0.0.1")
+                                                                                                        .setPortValue(50051)
+                                                                                                        .build()
+                                                                                        )
+                                                                        )
+                                                                        .build()
+                                                        )
+                                                        .build()
+                                        )
+                                        .addLbEndpoints(
+                                                LbEndpoint.newBuilder()
+                                                        .setHealthStatus(HealthStatus.HEALTHY)
+                                                        .setLoadBalancingWeight(UInt32Value.newBuilder().setValue(50).build())
+                                                        .setEndpoint(
+                                                                Endpoint.newBuilder()
+                                                                        .setAddress(
+                                                                                Address.newBuilder()
+                                                                                        .setSocketAddress(
+                                                                                                SocketAddress.newBuilder()
+                                                                                                        .setAddress("127.0.0.1")
+                                                                                                        .setPortValue(50052)
+                                                                                                        .build()
+                                                                                        )
+                                                                        )
+                                                                        .build()
+                                                        )
+                                                        .build()
+                                        )
+                                        .build())
+                                .build()
+                ),
+                List.of(
+                        Listener.newBuilder()
+                                .setName("seriescache")
+                                .setTrafficDirection(TrafficDirection.INBOUND)
+                                .setApiListener(
+                                        ApiListener.newBuilder()
+                                                .setApiListener(Any.pack(
+                                                        HttpConnectionManager.newBuilder()
+                                                                .addHttpFilters(
+                                                                        HttpFilter.newBuilder()
+                                                                                .setName("f1")
+                                                                                .setTypedConfig(Any.pack(
+                                                                                                Router.newBuilder()
+                                                                                                        .build()
+                                                                                        )
                                                                                 )
                                                                                 .build()
                                                                 )
+                                                                .setRouteConfig(localRoute)
+                                                                .build()
+                                                ))
+                                                .build()
+                                )
+                                .setAddress(
+                                        Address.newBuilder()
+                                                .setSocketAddress(
+                                                        SocketAddress.newBuilder()
+                                                                .setAddress("127.0.0.1")
+                                                                .setPortValue(8000)
                                                                 .build()
                                                 )
-                                                .addLbEndpoints(
-                                                        LbEndpoint.newBuilder()
-                                                                .setHealthStatus(HealthStatus.HEALTHY)
-                                                                .setLoadBalancingWeight(UInt32Value.newBuilder().setValue(50).build())
-                                                                .setEndpoint(
-                                                                        Endpoint.newBuilder()
-                                                                                .setAddress(
-                                                                                        Address.newBuilder()
-                                                                                                .setSocketAddress(
-                                                                                                        SocketAddress.newBuilder()
-                                                                                                                .setAddress("127.0.0.1")
-                                                                                                                .setPortValue(50052)
-                                                                                                                .build()
-                                                                                                )
-                                                                                )
-                                                                                .build()
-                                                                )
-                                                                .build()
-                                                )
-                                                .build())
-                                        .build()
-                        ),
-                        List.of(
-                                Listener.newBuilder()
-                                        .setName("seriescache")
-                                        .setTrafficDirection(TrafficDirection.INBOUND)
-                                        .setApiListener(
-                                                ApiListener.newBuilder()
-                                                        .setApiListener(Any.pack(
-                                                                HttpConnectionManager.newBuilder()
-                                                                        .addHttpFilters(
-                                                                                HttpFilter.newBuilder()
-                                                                                        .setName("f1")
-                                                                                        .setTypedConfig(Any.pack(
-                                                                                                        Router.newBuilder()
-                                                                                                                .build()
-                                                                                                )
+                                                .build()
+                                )
+                                .addFilterChains(
+                                        FilterChain.newBuilder()
+                                                .addFilters(
+                                                        Filter.newBuilder()
+                                                                .setTypedConfig(
+                                                                        Any.pack(
+                                                                                HttpConnectionManager.newBuilder()
+                                                                                        .setRouteConfig(
+                                                                                                localRoute
                                                                                         )
                                                                                         .build()
                                                                         )
-                                                                        .setRouteConfig(localRoute)
-                                                                        .build()
-                                                        ))
-                                                        .build()
-                                        )
-                                        .setAddress(
-                                                Address.newBuilder()
-                                                        .setSocketAddress(
-                                                                SocketAddress.newBuilder()
-                                                                        .setAddress("127.0.0.1")
-                                                                        .setPortValue(8000)
-                                                                        .build()
-                                                        )
-                                                        .build()
-                                        )
-                                        .addFilterChains(
-                                                FilterChain.newBuilder()
-                                                        .addFilters(
-                                                                Filter.newBuilder()
-                                                                        .setTypedConfig(
-                                                                                Any.pack(
-                                                                                        HttpConnectionManager.newBuilder()
-                                                                                                .setRouteConfig(
-                                                                                                        localRoute
-                                                                                                )
-                                                                                                .build()
-                                                                                )
-                                                                        )
-                                                        )
-                                                        .build()
-                                        ).build()
-                        ),
-                        List.of(),
-                        ImmutableList.of(),
-                        "1"));
+                                                                )
+                                                )
+                                                .build()
+                                ).build()
+                ),
+                List.of(),
+                ImmutableList.of(),
+                "1");
 
-        V2DiscoveryServer discoveryServer = new V2DiscoveryServer(cache);
+        cache.setSnapshot(GROUP,snapshot);
+
         V3DiscoveryServer v3DiscoveryServer = new V3DiscoveryServer(cache);
 
         ServerBuilder builder = NettyServerBuilder.forPort(8000)
-                .addService(discoveryServer.getAggregatedDiscoveryServiceImpl())
-                .addService(discoveryServer.getClusterDiscoveryServiceImpl())
-                .addService(discoveryServer.getEndpointDiscoveryServiceImpl())
-                .addService(discoveryServer.getListenerDiscoveryServiceImpl())
-                .addService(discoveryServer.getRouteDiscoveryServiceImpl())
                 .addService(v3DiscoveryServer.getAggregatedDiscoveryServiceImpl())
                 .addService(v3DiscoveryServer.getClusterDiscoveryServiceImpl())
                 .addService(v3DiscoveryServer.getEndpointDiscoveryServiceImpl())
                 .addService(v3DiscoveryServer.getListenerDiscoveryServiceImpl())
-                .addService(v3DiscoveryServer.getRouteDiscoveryServiceImpl());
+                .addService(v3DiscoveryServer.getRouteDiscoveryServiceImpl())
+                .addService(new LoadReportingServiceGrpc.LoadReportingServiceImplBase() {
+                    @Override
+                    public StreamObserver<LoadStatsRequest> streamLoadStats(StreamObserver<LoadStatsResponse> responseObserver) {
+                        return new StreamObserver<LoadStatsRequest>() {
+                            @Override
+                            public void onNext(LoadStatsRequest value) {
+                                responseObserver.onNext(LoadStatsResponse.newBuilder()
+                                        .build());
+                            }
+
+                            @Override
+                            public void onError(Throwable t) {
+                                responseObserver.onError(t);
+                            }
+
+                            @Override
+                            public void onCompleted() {
+                                responseObserver.onCompleted();
+                            }
+                        };
+                    }
+                });
 
         Server server = builder.build();
 
